latest git vcmi-develop-2019.02.03

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  vcmi-0.99.tar.gz: 23d647ddf2f1485812bb93dfed8cc5c37fa1d2ef
+  vcmi-develop-2019.02.03.zip: 11332483f2e23c7b0fd3e9e4e9fd43be0ae593d2
