--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  vcmi-develop-2019.02.03.zip: 11332483f2e23c7b0fd3e9e4e9fd43be0ae593d2
+  vcmi-develop-2019.02.04.tar.xz: c4545a4bab67d15780cf2776919abdc15bcb17ad
