--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  vcmi-develop-2019.02.04.tar.xz: c4545a4bab67d15780cf2776919abdc15bcb17ad
+  vcmi-master-31.01.2020.tar.xz: 6d50fca7c2613ed7fb2ca207bc5c40317d0a6bd2
